# hallpaper

./: cabal.project  notes.md  scripts.cabal
app/: HallpaperClient.hs  Hallpaperd.hs  Main.hs  Wallpapers.hs
src/: Wallpapers.hs
