cabal-version:      2.4
name:               hallpaper
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Josh Brown
maintainer:         joshcarlbrown@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library

    exposed-modules: Wallpapers
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      turtle ^>= 1.6.1,
                      random-shuffle ^>=0.0.4,
                      gi-notify ^>=0.7.27,
                      dbus ^>=1.3.2,
                      time,
                      haskell-gi-base,
                      random,
                      filepath,
                      foldl,
                      text,
    ghc-options: -Wall, -O2
    hs-source-dirs:   src
    default-extensions: OverloadedStrings
    default-language: Haskell2010

executable hallpaperd
    main-is:          Hallpaperd.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      hallpaper,
    ghc-options: -Wall, -O2
    hs-source-dirs:   app
    default-language: Haskell2010

executable hallpaper-client
    main-is:          HallpaperClient.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      hallpaper,
    ghc-options: -Wall, -O2
    hs-source-dirs:   app
    default-language: Haskell2010
